# enable-your-vibe-exercise

./: README.md  pyproject.toml
02-claude-code-features/: README.md  exercise_01_fibonacci.py  exercise_02_fibonacci_test.py
03-mcp-architecture/: README.md  exercise_01_hello_mcp.py  exercise_02_calculator_mcp.py
04-genie-mcp/: .env.example  README.md  exercise_01a_create_space.py  exercise_01b_query_space.py  exercise_02_genie_mcp_server.py  exercise_checklist.py  exercise_genie_mcp_server.py  genie_helpers.py
05-genie-mcp/: .env.example  README.md  exercise_01a_create_space.py  exercise_01b_query_space.py  exercise_02_genie_mcp_server.py
05-skills/: README.md
05-skills/exercise_01_simple_skill/: SKILL.md
05-skills/exercise_02_skill_with_refs/: README.md
05-skills/exercise_genie_skill/: README.md  SKILL.md
05-skills/exercise_genie_skill/references/: genie-best-practices.md
06-agents/: README.md  exercise_unity_catalog_mcp.py
06-agents/exercise_genie_agents/: README.md  genie-instructor.md  genie-space-designer.md  genie-tester.md
06-agents/exercise_genie_analyst/: README.md  data-analyst.md  sql-reviewer.md
06-skills-workflow/: README.md
06-skills-workflow/exercise_01_simple_skill/: README.md
06-skills-workflow/exercise_02_skill_with_refs/: SKILL.md
07-build-ui/: .env.example  README.md
07-build-ui/exercise_02_genie_chatbot/: app.py
08-build-ui/: README.md  exercise_01_fastapi_basic.py
08-deploy-to-databricks/: .env.example  README.md
09-deploy-to-databricks/: README.md  exercise_01_prepare_deploy.py
(+5 files in other folders)
